--- a/lang/de.json
+++ b/lang/de.json
@@ -56,6 +56,7 @@
   "auth.title_setup_admin": "Initialisierung",
   "auto_retention_info": "Informationen zur automatischen Aufbewahrung",
   "available_backups": "Verfügbare Backups",
+  "back": "Zurück",
   "backup": "Sicherung",
   "backup_create_error": "Fehler beim Erstellen des Backups: {error}",
   "backup_created": "Backup erstellt: {name}",
@@ -146,6 +147,7 @@
   "disable_on_expiry": "Zugriff bei Ablauf deaktivieren",
   "disable_user_on_expiration": "Benutzer bei Ablauf deaktivieren",
   "disabled": "Deaktiviert",
+  "discord_order_hint": "Discord-DM",
   "documentation": "Dokumentation",
   "done": "Fertig",
   "download_logs": "Download logs",
@@ -153,6 +155,7 @@
   "email_automatic_notice": "Dies ist eine automatisch versendete E-Mail.",
   "email_days_before": "Tage vor Ablauf",
   "email_history": "E-Mail-Verlauf",
+  "email_order_hint": "E-Mail-Benachrichtigung",
   "email_template_body": "Vorlageninhalt",
   "email_template_fin": "Vorlage: Abonnement abgelaufen",
   "email_template_preavis": "Vorlage: Vor Ablauf",
@@ -299,6 +302,7 @@
   "merge_show_top": "Nur Top 5 anzeigen",
   "merge_target_user": "Zielbenutzer",
   "merge_user": "Benutzer zusammenführen",
+  "merged_usernames": "Zusammengeführte Benutzernamen",
   "message": "Nachricht",
   "modified_at": "Geändert am",
   "monday": "Montag",
@@ -323,6 +327,8 @@
   "monitoring.table.title": "Titel",
   "monitoring.table.user": "Benutzer",
   "monitoring.title": "Monitoring",
+  "move_down": "Nach unten",
+  "move_up": "Nach oben",
   "movie": "Filme",
   "name": "Name",
   "nav.monitoring": "Monitoring",
@@ -355,8 +361,17 @@
   "no_users_for_server": "Keine Benutzer haben Zugriff auf diesen Server.",
   "not_available": "Nicht verfügbar",
   "notes": "Notizen",
+  "notification_settings": "Benachrichtigungseinstellungen",
+  "notification_system_order": "Reihenfolge des Benachrichtigungssystems",
+  "notification_system_order_example": "Beispiel: Discord → E-Mail bedeutet: zuerst Discord, dann bei Bedarf E-Mail.",
+  "notification_system_order_help": "VODUM versucht die Kanäle in dieser Reihenfolge. Ist ein Kanal nicht verfügbar oder schlägt fehl, wird automatisch der nächste versucht.",
+  "notifications_fallback": "Fallback-Kanal",
+  "notifications_fallback_help": "Wird nur verwendet, wenn der primäre Kanal nicht verfügbar ist oder fehlschlägt.",
+  "notifications_none": "Keiner",
   "notifications_order": "Notifications order",
   "notifications_order_help": "Comma-separated channels, e.g. discord,email or email,discord. Used for fallback.",
+  "notifications_primary": "Primärer Kanal",
+  "notifications_primary_help": "Hauptkanal für den Versand von Benachrichtigungen.",
   "offline": "Offline",
   "one_day": "1 Tag",
   "one_month": "1 Monat",
@@ -364,6 +379,7 @@
   "online": "Online",
   "open_an_issue": "Issue auf GitHub eröffnen",
   "options": "Optionen",
+  "order_of_execution": "Ausführungsreihenfolge",
   "os_info": "Betriebssystem",
   "other": "Sonstiges",
   "outlook": "Outlook",
@@ -435,10 +451,12 @@
   "purge_failed": "Bereinigung fehlgeschlagen",
   "python_version": "Python-Version",
   "raw_payload": "Rohdaten",
+  "read_only": "Nur lesen",
   "reason_optional": "Grund (optional)",
   "reason_placeholder": "z. B. Entschädigung, Geschenk, Vorfall…",
   "recent_events": "Letzte Ereignisse",
   "recent_events_hint": "Zeigt die neuesten von Vodum protokollierten Ereignisse und Aktionen.",
+  "recommended": "Empfohlen",
   "relance": "Erinnerung",
   "reminder": "Erinnerung",
   "remove": "Entfernen",
@@ -491,7 +509,12 @@
   "session_details": "Sitzungsdetails",
   "session_key": "Sitzungsschlüssel",
   "settings": "Einstellungen",
+  "settings_index_hint": "Öffnen Sie einen Abschnitt, um die Einstellungen zu bearbeiten. Jeder Abschnitt hat eine eigene Schaltfläche zum Speichern.",
   "settings_saved": "Einstellungen gespeichert.",
+  "settings_section_general_desc": "Sprache, Zeitzone, Administrator-Zugangsdaten und Plattformname.",
+  "settings_section_notifications_desc": "Fristen vor Ablauf und Reihenfolge der Benachrichtigungskanäle (mit Fallback).",
+  "settings_section_subscription_desc": "Standard-Abonnementdauer und Verhalten beim Ablauf.",
+  "settings_section_system_desc": "Geplante Aufgaben, Wartung und Debug-Optionen.",
   "settings_subtitle": "Anwendungskonfiguration",
   "seven_days": "7 Tage",
   "show": "Serien",
@@ -546,6 +569,11 @@
   "subject": "Betreff",
   "subscription_active": "Abonnement aktiv",
   "subscription_days_added": "Tage hinzugefügt",
+  "subscription_expiration_behavior": "Verhalten bei Ablauf",
+  "subscription_expiry_mode_disable_help": "Am Ablaufdatum entfernt VODUM die Bibliothekszugriffe auf Plex/Jellyfin. Das Konto wird NICHT auf dem Mediaserver gelöscht (Plex-Benutzer bleiben bestehen; nur der Zugriff wird entzogen).",
+  "subscription_expiry_mode_disable_title": "Zugriff bei Ablauf deaktivieren",
+  "subscription_expiry_mode_warn_help": "Am Ablaufdatum erstellt VODUM eine strenge, systemverwaltete Policy für diesen Benutzer (Hinweis beim Stoppen des Streams). Nach X Tagen entfernt VODUM die Bibliothekszugriffe auf Plex/Jellyfin. Bei Verlängerung wird die Policy automatisch entfernt.",
+  "subscription_expiry_mode_warn_title": "Hinweis „Abo abgelaufen“ anzeigen, dann nach X Tagen deaktivieren",
   "subscription_gift_history_days": "Tage",
   "subscription_gift_history_empty": "Noch keine Geschenke erfasst.",
   "subscription_gift_history_scope_all": "Alle Benutzer",
@@ -576,6 +604,7 @@
   "support_thanks": "Wenn dir VODUM gefällt und du die Entwicklung unterstützen möchtest, kannst du mir einen Kaffee spendieren.",
   "support_title": "Support",
   "suspended": "Suspendiert",
+  "system": "System",
   "system_info": "Systeminformationen",
   "system_settings": "Systemeinstellungen",
   "target_server": "Zielserver",
@@ -593,6 +622,8 @@
   "task.media_jobs_worker": "Media-Jobs-Worker",
   "task.monitor_collect_sessions": "Monitoring: Sitzungen erfassen",
   "task.monitor_enqueue_refresh": "Monitoring: Aktualisierung einreihen",
+  "task.send_campaign_discord": "Ausstehende Discord-Kampagnen senden",
+  "task.send_expiration_discord": "Ablaufbenachrichtigungen über Discord senden",
   "task.send_expiration_emails": "Ablauf-E-Mails",
   "task.send_mail_campaigns": "Kampagnen-E-Mails senden",
   "task.sync_jellyfin": "Jellyfin-Synchronisierung",
@@ -607,6 +638,7 @@
   "task_description.cleanup_backups": "Löscht Sicherungen, die älter als die definierte Aufbewahrungszeit sind.",
   "task_description.cleanup_unfriended": "Erkennt Freunde ohne geteilte Bibliotheken und markiert sie als nicht befreundet.",
   "task_description.disable_expired_users": "Entzieht den Bibliothekszugriff für abgelaufene Abonnements.",
+  "task_description.expired_subscription_manager": "System: „Abo abgelaufen“-Policy anzeigen, dann nach X Tagen Zugriff deaktivieren",
   "task_description.media_jobs_worker": "Wendet ausstehende Jellyfin/Plex-Zugriffsaktualisierungen an (media_jobs).",
   "task_description.monitor_collect_sessions": "Erfasst aktive Sitzungen (Plex/Jellyfin) für das Monitoring.",
   "task_description.monitor_enqueue_refresh": "Stellt Monitoring-Aktualisierungsjobs in die Warteschlange.",
@@ -644,6 +676,7 @@
   "thursday": "Donnerstag",
   "timezone": "Zeitzone",
   "timezone_placeholder": "Europe/Berlin",
+  "top_is_tried_first": "Oben wird zuerst versucht",
   "total": "gesamt",
   "transcoding": "Transkodierung",
   "tuesday": "Dienstag",
@@ -663,44 +696,21 @@
   "username": "Benutzername",
   "users": "Benutzer",
   "users_from_server": "Benutzer eines Servers",
-  "users_subtitle": "Plex-Benutzer und deren Zugänge verwalten",
+  "users_subtitle": "Benutzer und deren Zugänge verwalten",
   "users_title": "Benutzer",
   "users_total": "totali",
   "users_updated": "Benutzer aktualisiert",
   "value": "Wert",
   "view_all": "Alle anzeigen",
   "view_user": "Benutzer anzeigen",
+  "warn_then_disable_days_help": "Mindestens 1. Beispiel: 7 => Hinweis-Policy bis zu 7 Tage, danach Zugriff entzogen.",
+  "warn_then_disable_days_label": "Zugriff deaktivieren nach (Tagen)",
   "warning": "Warnung",
   "wednesday": "Mittwoch",
   "yahoo": "Yahoo",
   "yes": "Ja",
-  "back": "Zurück",
-
-  "notification_settings": "Benachrichtigungseinstellungen",
-
-  "settings_section_general_desc": "Sprache, Zeitzone, Administrator-Zugangsdaten und Plattformname.",
-  "settings_section_subscription_desc": "Standard-Abonnementdauer und Verhalten beim Ablauf.",
-  "settings_section_notifications_desc": "Fristen vor Ablauf und Reihenfolge der Benachrichtigungskanäle (mit Fallback).",
-  "settings_section_system_desc": "Geplante Aufgaben, Wartung und Debug-Optionen.",
-  "settings_index_hint": "Öffnen Sie einen Abschnitt, um die Einstellungen zu bearbeiten. Jeder Abschnitt hat eine eigene Schaltfläche zum Speichern.",
-
-  "notifications_primary": "Primärer Kanal",
-  "notifications_primary_help": "Hauptkanal für den Versand von Benachrichtigungen.",
-  "notifications_fallback": "Fallback-Kanal",
-  "notifications_fallback_help": "Wird nur verwendet, wenn der primäre Kanal nicht verfügbar ist oder fehlschlägt.",
-  "notifications_none": "Keiner",
-  "notification_system_order": "Reihenfolge des Benachrichtigungssystems",
-  "notification_system_order_help": "VODUM versucht die Kanäle in dieser Reihenfolge. Ist ein Kanal nicht verfügbar oder schlägt fehl, wird automatisch der nächste versucht.",
-  "order_of_execution": "Ausführungsreihenfolge",
-  "top_is_tried_first": "Oben wird zuerst versucht",
-  "move_up": "Nach oben",
-  "move_down": "Nach unten",
-  "notification_system_order_example": "Beispiel: Discord → E-Mail bedeutet: zuerst Discord, dann bei Bedarf E-Mail.",
-  "recommended": "Empfohlen",
-  "email_order_hint": "E-Mail-Benachrichtigung",
-  "discord_order_hint": "Discord-DM",
-  "task.send_campaign_discord": "Ausstehende Discord-Kampagnen senden",
-  "task.send_expiration_discord": "Ablaufbenachrichtigungen über Discord senden",
-  "merged_usernames": "Zusammengeführte Benutzernamen"
+  "subscription_expiry_mode_none_title": "Keine automatische Aktion",
+  "subscription_expiry_mode_none_help": "Es wird keine Aktion ausgeführt, wenn das Abonnement abläuft.",
+  "delete_after_expiry_days_help": "Entzieht den Zugriff auf den Media-Server nach X Tagen. Plex: Der Benutzer wird nicht aus Plex gelöscht, sondern nur die Freigaben werden entfernt."
 
 }
