--- a/lang/en.json
+++ b/lang/en.json
@@ -56,6 +56,7 @@
   "auth.title_setup_admin": "Initialization",
   "auto_retention_info": "Automatic retention information",
   "available_backups": "Available backups",
+  "back": "Back",
   "backup": "Backup",
   "backup_create_error": "Error while creating backup: {error}",
   "backup_created": "Backup created: {name}",
@@ -157,10 +158,10 @@
   "discord_help_1": "To send DMs, VODUM needs a Discord bot token and each user's Discord ID.",
   "discord_help_need_bot": "Create a bot in Discord Developer Portal and copy its token",
   "discord_help_need_user_id": "Fill each user's Discord user ID (snowflake) in the user page",
-
   "discord_help_title": "Discord help",
   "discord_name": "Discord name",
   "discord_note_tasks": "Discord tasks are enabled/disabled automatically with the switch.",
+  "discord_order_hint": "Discord DM",
   "discord_subtitle": "Discord notifications (DM) + campaigns",
   "discord_template_hint": "Light Markdown DM",
   "discord_token_help": "Token is stored in DB. Regenerate it if it leaked.",
@@ -173,6 +174,7 @@
   "email_automatic_notice": "This is an automated email.",
   "email_days_before": "Days before expiration",
   "email_history": "Email history",
+  "email_order_hint": "Email notification",
   "email_template_body": "Template body",
   "email_template_fin": "End-of-subscription template",
   "email_template_preavis": "Pre-expiration template",
@@ -322,6 +324,7 @@
   "merge_show_top": "Show only top 5",
   "merge_target_user": "Target user",
   "merge_user": "Merge user",
+  "merged_usernames": "Merged usernames",
   "message": "Message",
   "modified_at": "Modified",
   "monday": "Monday",
@@ -346,6 +349,8 @@
   "monitoring.table.title": "Title",
   "monitoring.table.user": "User",
   "monitoring.title": "Monitoring",
+  "move_down": "Move down",
+  "move_up": "Move up",
   "movie": "Movies",
   "name": "Name",
   "nav.monitoring": "Monitoring",
@@ -379,8 +384,17 @@
   "no_users_for_server": "No users currently have access to this server.",
   "not_available": "Not available",
   "notes": "Notes",
+  "notification_settings": "Notification settings",
+  "notification_system_order": "Notification system order",
+  "notification_system_order_example": "Example: Discord → Email means VODUM tries Discord first, then falls back to Email if needed.",
+  "notification_system_order_help": "VODUM tries each channel in this order. If a channel is unavailable or fails, it automatically tries the next one.",
+  "notifications_fallback": "Fallback channel",
+  "notifications_fallback_help": "Used only if the primary channel is unavailable or fails.",
+  "notifications_none": "None",
   "notifications_order": "Notifications order",
   "notifications_order_help": "Comma-separated channels, e.g. discord,email or email,discord. Used for fallback.",
+  "notifications_primary": "Primary channel",
+  "notifications_primary_help": "Main channel used to send notifications.",
   "offline": "Offline",
   "one_day": "1 day",
   "one_month": "1 month",
@@ -388,6 +402,7 @@
   "online": "Online",
   "open_an_issue": "Open an issue on GitHub",
   "options": "Options",
+  "order_of_execution": "Order of execution",
   "os_info": "Operating system",
   "other": "Other",
   "outlook": "Outlook",
@@ -461,10 +476,12 @@
   "purge_failed": "Purge failed",
   "python_version": "Python version",
   "raw_payload": "Raw payload",
+  "read_only": "Read-only",
   "reason_optional": "Reason (optional)",
   "reason_placeholder": "e.g. compensation, gift, incident…",
   "recent_events": "Recent events",
   "recent_events_hint": "Shows the latest events and actions recorded by Vodum.",
+  "recommended": "Recommended",
   "relance": "Reminder",
   "reminder": "Reminder",
   "remove": "Remove",
@@ -518,7 +535,12 @@
   "session_details": "Session details",
   "session_key": "Session key",
   "settings": "Settings",
+  "settings_index_hint": "Open a section to edit settings. Each section has its own Save button.",
   "settings_saved": "Settings saved.",
+  "settings_section_general_desc": "Language, timezone, admin credentials and brand name.",
+  "settings_section_notifications_desc": "Delays before expiry + notification channel order (with fallback).",
+  "settings_section_subscription_desc": "Default subscription duration and expiry behavior.",
+  "settings_section_system_desc": "Scheduled tasks, maintenance and debug options.",
   "settings_subtitle": "Application configuration",
   "seven_days": "7 days",
   "show": "Shows",
@@ -573,6 +595,11 @@
   "subject": "Subject",
   "subscription_active": "Subscription active",
   "subscription_days_added": "days added",
+  "subscription_expiration_behavior": "Expiration behavior",
+  "subscription_expiry_mode_disable_help": "On the expiration date, VODUM removes the user's library access on Plex/Jellyfin. The account is NOT deleted on the media server (Plex users are kept; only access is revoked).",
+  "subscription_expiry_mode_disable_title": "Disable access on expiration",
+  "subscription_expiry_mode_warn_help": "On the expiration date, VODUM creates a strict, system-managed policy for this user (message displayed when the stream is stopped). After X days, VODUM removes the user's library access on Plex/Jellyfin. If the subscription is renewed, the policy is automatically removed.",
+  "subscription_expiry_mode_warn_title": "Show \"subscription expired\" warning, then disable after X days",
   "subscription_gift_history_days": "days",
   "subscription_gift_history_empty": "No gifts recorded yet.",
   "subscription_gift_history_scope_all": "All users",
@@ -603,6 +630,7 @@
   "support_thanks": "If you enjoy VODUM and want to support its development, you can buy me a coffee.",
   "support_title": "Support",
   "suspended": "Suspended",
+  "system": "System",
   "system_info": "System Info",
   "system_settings": "System settings",
   "target_server": "Target server",
@@ -621,6 +649,8 @@
   "task.media_jobs_worker": "Media jobs worker",
   "task.monitor_collect_sessions": "Monitoring: collect sessions",
   "task.monitor_enqueue_refresh": "Monitoring: enqueue refresh",
+  "task.send_campaign_discord": "Send pending Discord campaigns",
+  "task.send_expiration_discord": "Send expiration notifications via Discord",
   "task.send_expiration_emails": "Send expiration emails",
   "task.send_mail_campaigns": "Send campaign emails",
   "task.sync_jellyfin": "Jellyfin sync",
@@ -636,6 +666,7 @@
   "task_description.cleanup_backups": "Deletes backups older than the retention period.",
   "task_description.cleanup_unfriended": "Detects friends without any library and marks them as unfriended.",
   "task_description.disable_expired_users": "Removes library access for expired subscriptions.",
+  "task_description.expired_subscription_manager": "System: show \"subscription expired\" policy, then disable access after X days",
   "task_description.media_jobs_worker": "Applies pending Jellyfin/Plex access updates (media_jobs).",
   "task_description.monitor_collect_sessions": "Collects active sessions (Plex/Jellyfin) for monitoring.",
   "task_description.monitor_enqueue_refresh": "Queues monitoring refresh jobs.",
@@ -675,6 +706,7 @@
   "thursday": "Thursday",
   "timezone": "Timezone",
   "timezone_placeholder": "Europe/Paris",
+  "top_is_tried_first": "Top is tried first",
   "total": "total",
   "transcoding": "Transcoding",
   "tuesday": "Tuesday",
@@ -694,43 +726,21 @@
   "username": "Username",
   "users": "Users",
   "users_from_server": "Users from a server",
-  "users_subtitle": "Manage Plex users and their access",
+  "users_subtitle": "Manage users and their access",
   "users_title": "Users",
   "users_total": "total",
   "users_updated": "users updated",
   "value": "Value",
   "view_all": "View all",
   "view_user": "View user",
+  "warn_then_disable_days_help": "Minimum 1. Example: 7 means the user sees the warning policy for up to 7 days, then access is revoked.",
+  "warn_then_disable_days_label": "Disable access after (days)",
   "warning": "Warning",
   "wednesday": "Wednesday",
   "yahoo": "Yahoo",
   "yes": "Yes",
-  "back": "Back",
+  "subscription_expiry_mode_none_title": "No automatic action",
+  "subscription_expiry_mode_none_help": "No action will be taken when the subscription expires.",
+  "delete_after_expiry_days_help": "Removes media server access after X days. Plex: the user is not deleted from Plex, only the library shares are revoked."
 
-  "notification_settings": "Notification settings",
-
-  "settings_section_general_desc": "Language, timezone, admin credentials and brand name.",
-  "settings_section_subscription_desc": "Default subscription duration and expiry behavior.",
-  "settings_section_notifications_desc": "Delays before expiry + notification channel order (with fallback).",
-  "settings_section_system_desc": "Scheduled tasks, maintenance and debug options.",
-  "settings_index_hint": "Open a section to edit settings. Each section has its own Save button.",
-
-  "notifications_primary": "Primary channel",
-  "notifications_primary_help": "Main channel used to send notifications.",
-  "notifications_fallback": "Fallback channel",
-  "notifications_fallback_help": "Used only if the primary channel is unavailable or fails.",
-  "notifications_none": "None",
-  "notification_system_order": "Notification system order",
-  "notification_system_order_help": "VODUM tries each channel in this order. If a channel is unavailable or fails, it automatically tries the next one.",
-  "order_of_execution": "Order of execution",
-  "top_is_tried_first": "Top is tried first",
-  "move_up": "Move up",
-  "move_down": "Move down",
-  "notification_system_order_example": "Example: Discord → Email means VODUM tries Discord first, then falls back to Email if needed.",
-  "recommended": "Recommended",
-  "email_order_hint": "Email notification",
-  "discord_order_hint": "Discord DM",
-  "task.send_campaign_discord": "Send pending Discord campaigns",
-  "task.send_expiration_discord": "Send expiration notifications via Discord",
-  "merged_usernames": "Merged usernames"
 }
