--- a/lang/es.json
+++ b/lang/es.json
@@ -56,6 +56,7 @@
   "auth.title_setup_admin": "Inicialización",
   "auto_retention_info": "Información de retención automática",
   "available_backups": "Copias de seguridad disponibles",
+  "back": "Volver",
   "backup": "Copia de seguridad",
   "backup_create_error": "Error al crear la copia de seguridad: {error}",
   "backup_created": "Copia de seguridad creada: {name}",
@@ -146,6 +147,7 @@
   "disable_on_expiry": "Desactivar acceso al expirar",
   "disable_user_on_expiration": "Desactivar usuario al expirar",
   "disabled": "Deshabilitado",
+  "discord_order_hint": "Mensaje privado de Discord",
   "documentation": "Documentación",
   "done": "Hecho",
   "download_logs": "Download logs",
@@ -153,6 +155,7 @@
   "email_automatic_notice": "Este es un correo electrónico automático.",
   "email_days_before": "Días antes de la expiración",
   "email_history": "Historial de correos",
+  "email_order_hint": "Notificación por email",
   "email_template_body": "Contenido del modelo",
   "email_template_fin": "Modelo de fin de abono",
   "email_template_preavis": "Modelo de pre-expiración",
@@ -299,6 +302,7 @@
   "merge_show_top": "Mostrar solo el top 5",
   "merge_target_user": "Usuario objetivo",
   "merge_user": "Fusionar usuario",
+  "merged_usernames": "Nombres de usuario fusionados",
   "message": "Mensaje",
   "modified_at": "Modificado el",
   "monday": "Lunes",
@@ -323,6 +327,8 @@
   "monitoring.table.title": "Título",
   "monitoring.table.user": "Usuario",
   "monitoring.title": "Monitorización",
+  "move_down": "Bajar",
+  "move_up": "Subir",
   "movie": "Películas",
   "name": "Nombre",
   "nav.monitoring": "Monitorización",
@@ -355,8 +361,17 @@
   "no_users_for_server": "Ningún usuario tiene acceso a este servidor.",
   "not_available": "No disponible",
   "notes": "Notas",
+  "notification_settings": "Configuración de notificaciones",
+  "notification_system_order": "Orden del sistema de notificaciones",
+  "notification_system_order_example": "Ejemplo: Discord → Email significa que VODUM prueba Discord primero y luego usa Email si es necesario.",
+  "notification_system_order_help": "VODUM prueba los canales en este orden. Si un canal no está disponible o falla, intenta automáticamente el siguiente.",
+  "notifications_fallback": "Canal de respaldo",
+  "notifications_fallback_help": "Se utiliza solo si el canal principal no está disponible o falla.",
+  "notifications_none": "Ninguno",
   "notifications_order": "Notifications order",
   "notifications_order_help": "Comma-separated channels, e.g. discord,email or email,discord. Used for fallback.",
+  "notifications_primary": "Canal principal",
+  "notifications_primary_help": "Canal principal utilizado para enviar notificaciones.",
   "offline": "Fuera de línea",
   "one_day": "1 día",
   "one_month": "1 mes",
@@ -364,6 +379,7 @@
   "online": "En línea",
   "open_an_issue": "Abrir una incidencia en GitHub",
   "options": "Opciones",
+  "order_of_execution": "Orden de ejecución",
   "os_info": "Sistema operativo",
   "other": "Otro",
   "outlook": "Outlook",
@@ -435,10 +451,12 @@
   "purge_failed": "Error al purgar",
   "python_version": "Versión de Python",
   "raw_payload": "Contenido bruto",
+  "read_only": "Solo lectura",
   "reason_optional": "Motivo (opcional)",
   "reason_placeholder": "Ej.: compensación, regalo, incidente…",
   "recent_events": "Eventos recientes",
   "recent_events_hint": "Muestra los últimos eventos y acciones registrados por Vodum.",
+  "recommended": "Recomendado",
   "relance": "Recordatorio",
   "reminder": "Recordatorio",
   "remove": "Eliminar",
@@ -491,7 +509,12 @@
   "session_details": "Detalles de sesión",
   "session_key": "Clave de sesión",
   "settings": "Configuración",
+  "settings_index_hint": "Abra una sección para editar la configuración. Cada sección tiene su propio botón de Guardar.",
   "settings_saved": "Configuración guardada.",
+  "settings_section_general_desc": "Idioma, zona horaria, credenciales de administrador y nombre de la plataforma.",
+  "settings_section_notifications_desc": "Plazos antes del vencimiento y orden de los canales de notificación (con respaldo).",
+  "settings_section_subscription_desc": "Duración de suscripción predeterminada y comportamiento al vencer.",
+  "settings_section_system_desc": "Tareas programadas, mantenimiento y opciones de depuración.",
   "settings_subtitle": "Configuración de la aplicación",
   "seven_days": "7 días",
   "show": "Series",
@@ -546,6 +569,11 @@
   "subject": "Asunto",
   "subscription_active": "Abono activo",
   "subscription_days_added": "días añadidos",
+  "subscription_expiration_behavior": "Comportamiento al expirar",
+  "subscription_expiry_mode_disable_help": "En la fecha de expiración, VODUM elimina los accesos a bibliotecas en Plex/Jellyfin. La cuenta NO se elimina del servidor multimedia (en Plex el usuario se conserva; solo se revoca el acceso).",
+  "subscription_expiry_mode_disable_title": "Desactivar acceso al expirar",
+  "subscription_expiry_mode_warn_help": "En la fecha de expiración, VODUM crea una política estricta gestionada por el sistema para este usuario (mensaje al detener el stream). Tras X días, VODUM elimina los accesos a bibliotecas en Plex/Jellyfin. Si se renueva la suscripción, la política se elimina automáticamente.",
+  "subscription_expiry_mode_warn_title": "Mostrar aviso «suscripción finalizada» y desactivar tras X días",
   "subscription_gift_history_days": "días",
   "subscription_gift_history_empty": "Aún no se ha registrado ningún regalo.",
   "subscription_gift_history_scope_all": "Todos los usuarios",
@@ -576,6 +604,7 @@
   "support_thanks": "Si te gusta VODUM y quieres apoyar su desarrollo, puedes invitarme a un café.",
   "support_title": "Soporte",
   "suspended": "Suspendido",
+  "system": "Sistema",
   "system_info": "Información del sistema",
   "system_settings": "Configuración del sistema",
   "target_server": "Servidor objetivo",
@@ -593,6 +622,8 @@
   "task.media_jobs_worker": "Worker de trabajos multimedia",
   "task.monitor_collect_sessions": "Monitoreo: recopilación de sesiones",
   "task.monitor_enqueue_refresh": "Monitoreo: encolar actualización",
+  "task.send_campaign_discord": "Enviar campañas de Discord pendientes",
+  "task.send_expiration_discord": "Enviar notificaciones de expiración por Discord",
   "task.send_expiration_emails": "Correos de expiración",
   "task.send_mail_campaigns": "Enviar campañas de correo",
   "task.sync_jellyfin": "Sincronización de Jellyfin",
@@ -607,6 +638,7 @@
   "task_description.cleanup_backups": "Elimina copias de seguridad más antiguas que el período de retención.",
   "task_description.cleanup_unfriended": "Detecta amigos sin bibliotecas compartidas y los marca como no amigos.",
   "task_description.disable_expired_users": "Elimina el acceso a las bibliotecas para suscripciones expiradas.",
+  "task_description.expired_subscription_manager": "Sistema: mostrar política «suscripción finalizada» y desactivar tras X días",
   "task_description.media_jobs_worker": "Aplica las actualizaciones de acceso pendientes de Jellyfin/Plex (media_jobs).",
   "task_description.monitor_collect_sessions": "Recopila las sesiones activas (Plex/Jellyfin) para el monitoreo.",
   "task_description.monitor_enqueue_refresh": "Añade a la cola los trabajos de actualización del monitoreo.",
@@ -644,6 +676,7 @@
   "thursday": "Jueves",
   "timezone": "Zona horaria",
   "timezone_placeholder": "Europe/Madrid",
+  "top_is_tried_first": "Se intenta primero el de arriba",
   "total": "total",
   "transcoding": "Transcodificación",
   "tuesday": "Martes",
@@ -663,44 +696,21 @@
   "username": "Nombre de usuario",
   "users": "Usuarios",
   "users_from_server": "Usuarios de un servidor",
-  "users_subtitle": "Gestionar usuarios Plex y sus accesos",
+  "users_subtitle": "Gestionar usuarios y sus accesos",
   "users_title": "Usuarios",
   "users_total": "en total",
   "users_updated": "usuarios actualizados",
   "value": "Valor",
   "view_all": "Ver todo",
   "view_user": "Ver usuario",
+  "warn_then_disable_days_help": "Mínimo 1. Ejemplo: 7 => el usuario ve la política de aviso hasta 7 días y luego se revoca el acceso.",
+  "warn_then_disable_days_label": "Desactivar acceso después de (días)",
   "warning": "Advertencia",
   "wednesday": "Miércoles",
   "yahoo": "Yahoo",
   "yes": "Sí",
-  "back": "Volver",
-
-  "notification_settings": "Configuración de notificaciones",
-
-  "settings_section_general_desc": "Idioma, zona horaria, credenciales de administrador y nombre de la plataforma.",
-  "settings_section_subscription_desc": "Duración de suscripción predeterminada y comportamiento al vencer.",
-  "settings_section_notifications_desc": "Plazos antes del vencimiento y orden de los canales de notificación (con respaldo).",
-  "settings_section_system_desc": "Tareas programadas, mantenimiento y opciones de depuración.",
-  "settings_index_hint": "Abra una sección para editar la configuración. Cada sección tiene su propio botón de Guardar.",
-
-  "notifications_primary": "Canal principal",
-  "notifications_primary_help": "Canal principal utilizado para enviar notificaciones.",
-  "notifications_fallback": "Canal de respaldo",
-  "notifications_fallback_help": "Se utiliza solo si el canal principal no está disponible o falla.",
-  "notifications_none": "Ninguno",
-  "notification_system_order": "Orden del sistema de notificaciones",
-  "notification_system_order_help": "VODUM prueba los canales en este orden. Si un canal no está disponible o falla, intenta automáticamente el siguiente.",
-  "order_of_execution": "Orden de ejecución",
-  "top_is_tried_first": "Se intenta primero el de arriba",
-  "move_up": "Subir",
-  "move_down": "Bajar",
-  "notification_system_order_example": "Ejemplo: Discord → Email significa que VODUM prueba Discord primero y luego usa Email si es necesario.",
-  "recommended": "Recomendado",
-  "email_order_hint": "Notificación por email",
-  "discord_order_hint": "Mensaje privado de Discord",
-  "task.send_campaign_discord": "Enviar campañas de Discord pendientes",
-  "task.send_expiration_discord": "Enviar notificaciones de expiración por Discord",
-  "merged_usernames": "Nombres de usuario fusionados"
+  "subscription_expiry_mode_none_title": "Sin acción automática",
+  "subscription_expiry_mode_none_help": "No se realizará ninguna acción cuando la suscripción expire.",
+  "delete_after_expiry_days_help": "Elimina el acceso al servidor multimedia después de X días. Plex: el usuario no se elimina de Plex, solo se revocan los accesos a bibliotecas."
 
 }
