--- a/lang/fr.json
+++ b/lang/fr.json
@@ -56,6 +56,7 @@
   "auth.title_setup_admin": "Initialisation",
   "auto_retention_info": "Informations sur la rétention automatique",
   "available_backups": "Sauvegardes disponibles",
+  "back": "Retour",
   "backup": "Sauvegarde",
   "backup_create_error": "Erreur lors de la création du backup : {error}",
   "backup_created": "Backup créé : {name}",
@@ -157,10 +158,10 @@
   "discord_help_1": "Pour envoyer des messages privés, VODUM a besoin d’un bot Discord (token) et de l’ID Discord de chaque utilisateur.",
   "discord_help_need_bot": "Créer un bot sur le portail développeur Discord et récupérer son token",
   "discord_help_need_user_id": "Renseigner l’ID utilisateur Discord (snowflake) dans la fiche utilisateur",
-
   "discord_help_title": "Aide Discord",
   "discord_name": "Discord name",
   "discord_note_tasks": "Les tâches Discord sont activées/désactivées automatiquement via le switch.",
+  "discord_order_hint": "Message privé Discord",
   "discord_subtitle": "Notifications Discord (DM) + campagnes",
   "discord_template_hint": "DM en Markdown léger",
   "discord_token_help": "Le token est stocké en base. Pense à le régénérer si tu l’as exposé.",
@@ -173,6 +174,7 @@
   "email_automatic_notice": "Ceci est un email automatique.",
   "email_days_before": "Jours avant expiration",
   "email_history": "Historique des emails",
+  "email_order_hint": "Notification email",
   "email_template_body": "Corps du modèle",
   "email_template_fin": "Modèle fin d’abonnement",
   "email_template_preavis": "Modèle pré-expiration",
@@ -322,6 +324,7 @@
   "merge_show_top": "Afficher seulement le top 5",
   "merge_target_user": "Utilisateur cible",
   "merge_user": "Fusionner l’utilisateur",
+  "merged_usernames": "Noms d'utilisateur fusionnés",
   "message": "Message",
   "modified_at": "Modifié le",
   "monday": "Monday",
@@ -346,6 +349,8 @@
   "monitoring.table.title": "Titre",
   "monitoring.table.user": "Utilisateur",
   "monitoring.title": "Monitoring",
+  "move_down": "Descendre",
+  "move_up": "Monter",
   "movie": "Films",
   "name": "Nom",
   "nav.monitoring": "Monitoring",
@@ -379,8 +384,17 @@
   "no_users_for_server": "Aucun utilisateur n’a accès à ce serveur.",
   "not_available": "Non disponible",
   "notes": "Notes",
+  "notification_settings": "Paramètres de notifications",
+  "notification_system_order": "Ordre du système de notifications",
+  "notification_system_order_example": "Exemple : Discord → Email signifie que VODUM essaie Discord d’abord, puis bascule sur l’email si nécessaire.",
+  "notification_system_order_help": "VODUM essaie chaque canal dans cet ordre. Si un canal est indisponible ou échoue, il passe automatiquement au suivant.",
+  "notifications_fallback": "Canal de secours",
+  "notifications_fallback_help": "Utilisé uniquement si le canal principal est indisponible ou échoue.",
+  "notifications_none": "Aucun",
   "notifications_order": "Ordre des notifications",
   "notifications_order_help": "Canaux séparés par des virgules, ex : discord,email ou email,discord. Sert au fallback.",
+  "notifications_primary": "Canal principal",
+  "notifications_primary_help": "Canal utilisé en priorité pour l’envoi des notifications.",
   "offline": "Hors ligne",
   "one_day": "1 jour",
   "one_month": "1 mois",
@@ -388,6 +402,7 @@
   "online": "En ligne",
   "open_an_issue": "Ouvrir une issue sur GitHub",
   "options": "Options",
+  "order_of_execution": "Ordre d’exécution",
   "os_info": "Système d’exploitation",
   "other": "Other",
   "outlook": "Outlook",
@@ -461,10 +476,12 @@
   "purge_failed": "Purge failed",
   "python_version": "Version Python",
   "raw_payload": "Raw payload",
+  "read_only": "Lecture seule",
   "reason_optional": "Raison (optionnel)",
   "reason_placeholder": "Ex : compensation, cadeau, incident…",
   "recent_events": "Recent events",
   "recent_events_hint": "Shows the latest events and actions recorded by Vodum.",
+  "recommended": "Recommandé",
   "relance": "Relance",
   "reminder": "Reminder",
   "remove": "Retirer",
@@ -518,7 +535,12 @@
   "session_details": "Session details",
   "session_key": "Session key",
   "settings": "Paramètres",
+  "settings_index_hint": "Ouvrez une section pour modifier les paramètres. Chaque section dispose de son propre bouton Enregistrer.",
   "settings_saved": "Paramètres sauvegardés.",
+  "settings_section_general_desc": "Langue, fuseau horaire, identifiants administrateur et nom de la plateforme.",
+  "settings_section_notifications_desc": "Délais avant expiration et ordre des canaux de notification (avec secours).",
+  "settings_section_subscription_desc": "Durée d’abonnement par défaut et comportement à l’expiration.",
+  "settings_section_system_desc": "Tâches planifiées, maintenance et options de débogage.",
   "settings_subtitle": "Configuration de l’application",
   "seven_days": "7 jours",
   "show": "Séries",
@@ -573,6 +595,11 @@
   "subject": "Sujet",
   "subscription_active": "Abonnement actif",
   "subscription_days_added": "jours ajoutés",
+  "subscription_expiration_behavior": "Comportement à l’expiration",
+  "subscription_expiry_mode_disable_help": "À la date d’expiration, VODUM retire les accès aux bibliothèques sur Plex/Jellyfin. Le compte n’est PAS supprimé du serveur média (sur Plex l’utilisateur est conservé ; seuls les accès sont retirés).",
+  "subscription_expiry_mode_disable_title": "Désactiver les accès à l’expiration",
+  "subscription_expiry_mode_warn_help": "À la date d’expiration, VODUM crée une policy stricte, gérée par le système, pour cet utilisateur (message affiché lors de l’arrêt du stream). Après X jours, VODUM retire les accès aux bibliothèques sur Plex/Jellyfin. Si l’abonnement est renouvelé, la policy est supprimée automatiquement.",
+  "subscription_expiry_mode_warn_title": "Afficher un message « abonnement terminé », puis désactiver après X jours",
   "subscription_gift_history_days": "jours",
   "subscription_gift_history_empty": "Aucun cadeau enregistré pour le moment.",
   "subscription_gift_history_scope_all": "Tous les utilisateurs",
@@ -603,6 +630,7 @@
   "support_thanks": "Si vous appréciez VODUM et souhaitez soutenir son développement, vous pouvez m’offrir un café.",
   "support_title": "Support",
   "suspended": "Suspendu",
+  "system": "Système",
   "system_info": "Informations système",
   "system_settings": "Paramètres système",
   "target_server": "Serveur cible",
@@ -621,6 +649,8 @@
   "task.media_jobs_worker": "Worker des jobs média",
   "task.monitor_collect_sessions": "Monitoring : collecte des sessions",
   "task.monitor_enqueue_refresh": "Monitoring : mise en file de refresh",
+  "task.send_campaign_discord": "Envoyer les campagnes Discord en attente",
+  "task.send_expiration_discord": "Envoyer les notifications d’expiration via Discord",
   "task.send_expiration_emails": "Envoi des emails d’expiration",
   "task.send_mail_campaigns": "Envoi des campagnes email",
   "task.sync_jellyfin": "Synchronisation Jellyfin",
@@ -636,6 +666,7 @@
   "task_description.cleanup_backups": "Supprime les sauvegardes plus anciennes que la durée de rétention définie.",
   "task_description.cleanup_unfriended": "Détecte les amis sans aucune bibliothèque partagée et les marque comme non amis.",
   "task_description.disable_expired_users": "Retire l'accès aux bibliothèques pour les abonnements expirés.",
+  "task_description.expired_subscription_manager": "Système : afficher une policy « abonnement terminé », puis désactiver après X jours",
   "task_description.media_jobs_worker": "Applique les mises à jour d’accès Jellyfin/Plex en attente (media_jobs).",
   "task_description.monitor_collect_sessions": "Collecte les sessions actives (Plex/Jellyfin) pour le monitoring.",
   "task_description.monitor_enqueue_refresh": "Ajoute en file d’attente les jobs de rafraîchissement du monitoring.",
@@ -675,6 +706,7 @@
   "thursday": "Thursday",
   "timezone": "Fuseau horaire",
   "timezone_placeholder": "Europe/Paris",
+  "top_is_tried_first": "Le premier est tenté en premier",
   "total": "total",
   "transcoding": "Transcoding",
   "tuesday": "Tuesday",
@@ -694,44 +726,21 @@
   "username": "Username",
   "users": "Utilisateurs",
   "users_from_server": "Utilisateurs d’un serveur",
-  "users_subtitle": "Gérer les utilisateurs Plex et leurs accès",
+  "users_subtitle": "Gérer les utilisateurs et leurs accès",
   "users_title": "Utilisateurs",
   "users_total": "au total",
   "users_updated": "utilisateurs mis à jour",
   "value": "Valeur",
   "view_all": "Voir tout",
   "view_user": "Voir l’utilisateur",
+  "warn_then_disable_days_help": "Minimum 1. Ex: 7 => l’utilisateur voit la policy d’avertissement jusqu’à 7 jours, puis les accès sont retirés.",
+  "warn_then_disable_days_label": "Désactiver les accès après (jours)",
   "warning": "Warning",
   "wednesday": "Wednesday",
   "yahoo": "Yahoo",
   "yes": "Oui",
-  "back": "Retour",
-
-  "notification_settings": "Paramètres de notifications",
-
-  "settings_section_general_desc": "Langue, fuseau horaire, identifiants administrateur et nom de la plateforme.",
-  "settings_section_subscription_desc": "Durée d’abonnement par défaut et comportement à l’expiration.",
-  "settings_section_notifications_desc": "Délais avant expiration et ordre des canaux de notification (avec secours).",
-  "settings_section_system_desc": "Tâches planifiées, maintenance et options de débogage.",
-  "settings_index_hint": "Ouvrez une section pour modifier les paramètres. Chaque section dispose de son propre bouton Enregistrer.",
-
-  "notifications_primary": "Canal principal",
-  "notifications_primary_help": "Canal utilisé en priorité pour l’envoi des notifications.",
-  "notifications_fallback": "Canal de secours",
-  "notifications_fallback_help": "Utilisé uniquement si le canal principal est indisponible ou échoue.",
-  "notifications_none": "Aucun",
-  "notification_system_order": "Ordre du système de notifications",
-  "notification_system_order_help": "VODUM essaie chaque canal dans cet ordre. Si un canal est indisponible ou échoue, il passe automatiquement au suivant.",
-  "order_of_execution": "Ordre d’exécution",
-  "top_is_tried_first": "Le premier est tenté en premier",
-  "move_up": "Monter",
-  "move_down": "Descendre",
-  "notification_system_order_example": "Exemple : Discord → Email signifie que VODUM essaie Discord d’abord, puis bascule sur l’email si nécessaire.",
-  "recommended": "Recommandé",
-  "email_order_hint": "Notification email",
-  "discord_order_hint": "Message privé Discord",
-  "task.send_campaign_discord": "Envoyer les campagnes Discord en attente",
-  "task.send_expiration_discord": "Envoyer les notifications d’expiration via Discord",
-  "merged_usernames": "Noms d'utilisateur fusionnés"
-
+  "subscription_expiry_mode_none_title": "Aucune action automatique",
+  "subscription_expiry_mode_none_help": "Aucune action ne sera effectuée lorsque l’abonnement expire.",
+  "delete_after_expiry_days_help": "Retire les accès au media server après X jours. Plex : l’utilisateur n’est pas supprimé de Plex, seuls les partages sont retirés."
+  
 }
