--- a/lang/it.json
+++ b/lang/it.json
@@ -56,6 +56,7 @@
   "auth.title_setup_admin": "Inizializzazione",
   "auto_retention_info": "Informazioni sulla conservazione automatica",
   "available_backups": "Backup disponibili",
+  "back": "Indietro",
   "backup": "Backup",
   "backup_create_error": "Errore durante la creazione del backup: {error}",
   "backup_created": "Backup creato: {name}",
@@ -146,6 +147,7 @@
   "disable_on_expiry": "Disabilita accesso alla scadenza",
   "disable_user_on_expiration": "Disabilita l’utente alla scadenza",
   "disabled": "Disabilitato",
+  "discord_order_hint": "DM Discord",
   "documentation": "Documentazione",
   "done": "Fatto",
   "download_logs": "Download logs",
@@ -153,6 +155,7 @@
   "email_automatic_notice": "Questa è un'email automatica.",
   "email_days_before": "Giorni prima della scadenza",
   "email_history": "Cronologia email",
+  "email_order_hint": "Notifica email",
   "email_template_body": "Corpo del modello",
   "email_template_fin": "Modello fine abbonamento",
   "email_template_preavis": "Modello pre-scadenza",
@@ -299,6 +302,7 @@
   "merge_show_top": "Mostra solo i primi 5",
   "merge_target_user": "Utente di destinazione",
   "merge_user": "Unisci utente",
+  "merged_usernames": "Nomi utente uniti",
   "message": "Messaggio",
   "modified_at": "Modificato il",
   "monday": "Lunedì",
@@ -323,6 +327,8 @@
   "monitoring.table.title": "Titolo",
   "monitoring.table.user": "Utente",
   "monitoring.title": "Monitoraggio",
+  "move_down": "Sposta giù",
+  "move_up": "Sposta su",
   "movie": "Film",
   "name": "Nome",
   "nav.monitoring": "Monitoraggio",
@@ -355,8 +361,17 @@
   "no_users_for_server": "Nessun utente ha accesso a questo server.",
   "not_available": "Non disponibile",
   "notes": "Note",
+  "notification_settings": "Impostazioni di notifica",
+  "notification_system_order": "Ordine del sistema di notifiche",
+  "notification_system_order_example": "Esempio: Discord → Email significa che VODUM prova prima Discord e, se necessario, passa all’email.",
+  "notification_system_order_help": "VODUM prova i canali in questo ordine. Se un canale non è disponibile o fallisce, prova automaticamente il successivo.",
+  "notifications_fallback": "Canale di fallback",
+  "notifications_fallback_help": "Utilizzato solo se il canale principale non è disponibile o fallisce.",
+  "notifications_none": "Nessuno",
   "notifications_order": "Notifications order",
   "notifications_order_help": "Comma-separated channels, e.g. discord,email or email,discord. Used for fallback.",
+  "notifications_primary": "Canale principale",
+  "notifications_primary_help": "Canale principale utilizzato per l’invio delle notifiche.",
   "offline": "Offline",
   "one_day": "1 giorno",
   "one_month": "1 mese",
@@ -364,6 +379,7 @@
   "online": "Online",
   "open_an_issue": "Apri una issue su GitHub",
   "options": "Opzioni",
+  "order_of_execution": "Ordine di esecuzione",
   "os_info": "Sistema operativo",
   "other": "Altro",
   "outlook": "Outlook",
@@ -435,10 +451,12 @@
   "purge_failed": "Pulizia non riuscita",
   "python_version": "Versione Python",
   "raw_payload": "Contenuto grezzo",
+  "read_only": "Sola lettura",
   "reason_optional": "Motivo (opzionale)",
   "reason_placeholder": "Es.: compensazione, regalo, incidente…",
   "recent_events": "Eventi recenti",
   "recent_events_hint": "Mostra gli ultimi eventi e le azioni registrate da Vodum.",
+  "recommended": "Consigliato",
   "relance": "Promemoria",
   "reminder": "Promemoria",
   "remove": "Rimuovi",
@@ -491,7 +509,12 @@
   "session_details": "Dettagli sessione",
   "session_key": "Chiave sessione",
   "settings": "Impostazioni",
+  "settings_index_hint": "Apri una sezione per modificare le impostazioni. Ogni sezione ha il proprio pulsante Salva.",
   "settings_saved": "Impostazioni salvate.",
+  "settings_section_general_desc": "Lingua, fuso orario, credenziali amministratore e nome della piattaforma.",
+  "settings_section_notifications_desc": "Tempi prima della scadenza e ordine dei canali di notifica (con fallback).",
+  "settings_section_subscription_desc": "Durata predefinita dell’abbonamento e comportamento alla scadenza.",
+  "settings_section_system_desc": "Attività pianificate, manutenzione e opzioni di debug.",
   "settings_subtitle": "Configurazione dell’applicazione",
   "seven_days": "7 giorni",
   "show": "Serie",
@@ -546,6 +569,11 @@
   "subject": "Oggetto",
   "subscription_active": "Abbonamento attivo",
   "subscription_days_added": "giorni aggiunti",
+  "subscription_expiration_behavior": "Comportamento alla scadenza",
+  "subscription_expiry_mode_disable_help": "Alla data di scadenza, VODUM rimuove l’accesso alle librerie su Plex/Jellyfin. L’account NON viene eliminato dal media server (su Plex l’utente resta; vengono rimossi solo gli accessi).",
+  "subscription_expiry_mode_disable_title": "Disattiva l’accesso alla scadenza",
+  "subscription_expiry_mode_warn_help": "Alla data di scadenza, VODUM crea una policy rigorosa gestita dal sistema per questo utente (messaggio quando lo stream viene fermato). Dopo X giorni, VODUM rimuove gli accessi alle librerie su Plex/Jellyfin. Se l’abbonamento viene rinnovato, la policy viene rimossa automaticamente.",
+  "subscription_expiry_mode_warn_title": "Mostra avviso «abbonamento scaduto», poi disattiva dopo X giorni",
   "subscription_gift_history_days": "giorni",
   "subscription_gift_history_empty": "Nessun regalo registrato al momento.",
   "subscription_gift_history_scope_all": "Tutti gli utenti",
@@ -576,6 +604,7 @@
   "support_thanks": "Se ti piace VODUM e vuoi supportarne lo sviluppo, puoi offrirmi un caffè.",
   "support_title": "Supporto",
   "suspended": "Sospeso",
+  "system": "Sistema",
   "system_info": "Informazioni di sistema",
   "system_settings": "Impostazioni di sistema",
   "target_server": "Server di destinazione",
@@ -593,6 +622,8 @@
   "task.media_jobs_worker": "Worker dei job multimediali",
   "task.monitor_collect_sessions": "Monitoraggio: raccolta sessioni",
   "task.monitor_enqueue_refresh": "Monitoraggio: accodamento aggiornamento",
+  "task.send_campaign_discord": "Inviare le campagne Discord in sospeso",
+  "task.send_expiration_discord": "Inviare notifiche di scadenza tramite Discord",
   "task.send_expiration_emails": "Email di scadenza",
   "task.send_mail_campaigns": "Invio campagne email",
   "task.sync_jellyfin": "Sincronizzazione Jellyfin",
@@ -607,6 +638,7 @@
   "task_description.cleanup_backups": "Elimina i backup più vecchi del periodo di conservazione definito.",
   "task_description.cleanup_unfriended": "Rileva amici senza librerie condivise e li contrassegna come non amici.",
   "task_description.disable_expired_users": "Rimuove l'accesso alle librerie per gli abbonamenti scaduti.",
+  "task_description.expired_subscription_manager": "Sistema: mostra policy «abbonamento scaduto» e disattiva dopo X giorni",
   "task_description.media_jobs_worker": "Applica gli aggiornamenti di accesso Jellyfin/Plex in sospeso (media_jobs).",
   "task_description.monitor_collect_sessions": "Raccoglie le sessioni attive (Plex/Jellyfin) per il monitoraggio.",
   "task_description.monitor_enqueue_refresh": "Aggiunge alla coda i job di aggiornamento del monitoraggio.",
@@ -644,6 +676,7 @@
   "thursday": "Giovedì",
   "timezone": "Fuso orario",
   "timezone_placeholder": "Europe/Rome",
+  "top_is_tried_first": "Il primo viene provato per primo",
   "total": "totale",
   "transcoding": "Transcodifica",
   "tuesday": "Martedì",
@@ -663,44 +696,21 @@
   "username": "Nome utente",
   "users": "Utenti",
   "users_from_server": "Utenti di un server",
-  "users_subtitle": "Gestisci gli utenti Plex e i loro accessi",
+  "users_subtitle": "Gestisci gli utenti e i loro accessi",
   "users_title": "Utenti",
   "users_total": "totali",
   "users_updated": "utenti aggiornati",
   "value": "Valore",
   "view_all": "Visualizza tutto",
   "view_user": "Mostra utente",
+  "warn_then_disable_days_help": "Minimo 1. Esempio: 7 => l’utente vede la policy di avviso fino a 7 giorni e poi l’accesso viene revocato.",
+  "warn_then_disable_days_label": "Disattiva l’accesso dopo (giorni)",
   "warning": "Avviso",
   "wednesday": "Mercoledì",
   "yahoo": "Yahoo",
   "yes": "Sì",
-  "back": "Indietro",
-
-  "notification_settings": "Impostazioni di notifica",
-
-  "settings_section_general_desc": "Lingua, fuso orario, credenziali amministratore e nome della piattaforma.",
-  "settings_section_subscription_desc": "Durata predefinita dell’abbonamento e comportamento alla scadenza.",
-  "settings_section_notifications_desc": "Tempi prima della scadenza e ordine dei canali di notifica (con fallback).",
-  "settings_section_system_desc": "Attività pianificate, manutenzione e opzioni di debug.",
-  "settings_index_hint": "Apri una sezione per modificare le impostazioni. Ogni sezione ha il proprio pulsante Salva.",
-
-  "notifications_primary": "Canale principale",
-  "notifications_primary_help": "Canale principale utilizzato per l’invio delle notifiche.",
-  "notifications_fallback": "Canale di fallback",
-  "notifications_fallback_help": "Utilizzato solo se il canale principale non è disponibile o fallisce.",
-  "notifications_none": "Nessuno",
-  "notification_system_order": "Ordine del sistema di notifiche",
-  "notification_system_order_help": "VODUM prova i canali in questo ordine. Se un canale non è disponibile o fallisce, prova automaticamente il successivo.",
-  "order_of_execution": "Ordine di esecuzione",
-  "top_is_tried_first": "Il primo viene provato per primo",
-  "move_up": "Sposta su",
-  "move_down": "Sposta giù",
-  "notification_system_order_example": "Esempio: Discord → Email significa che VODUM prova prima Discord e, se necessario, passa all’email.",
-  "recommended": "Consigliato",
-  "email_order_hint": "Notifica email",
-  "discord_order_hint": "DM Discord",
-  "task.send_campaign_discord": "Inviare le campagne Discord in sospeso",
-  "task.send_expiration_discord": "Inviare notifiche di scadenza tramite Discord",
-  "merged_usernames": "Nomi utente uniti"
+  "subscription_expiry_mode_none_title": "Nessuna azione automatica",
+  "subscription_expiry_mode_none_help": "Non verrà eseguita alcuna azione alla scadenza dell’abbonamento.",
+  "delete_after_expiry_days_help": "Rimuove l’accesso al media server dopo X giorni. Plex: l’utente non viene eliminato da Plex, vengono revocate solo le condivisioni delle librerie."
 
 }
